--- a/style/style.scss
+++ b/style/style.scss
@@ -31,7 +31,7 @@ a:hover {
 
 .wrapper {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 1)),
-    url(public/stream_online_banner.jpg);
+    url(../public/stream_online_banner.jpg);
   background-position: center;
   background-size: cover;
   height: 100vh;
