--- a/style/style.scss
+++ b/style/style.scss
@@ -14,6 +14,7 @@ html,
   background: black;
   color: white;
   scroll-behavior: smooth;
+  scroll-padding-top: 95px;
   --background-black: rgba(0, 0, 0, 0.8);
   --border-gray: rgb(59, 59, 59);
 }
@@ -27,13 +28,6 @@ a:active {
 }
 a:hover {
   color: white;
-}
-
-.wrapper {
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  width: 100%;
 }
 
 .header {
